--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,23 +19,24 @@
 
 .nav__notification {
   background-color: tomato;
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
+  width: 22px;
+  height: 22px;
+  border-radius: 11px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
+  font-size: 13px;
   font-weight: 600;
   position: absolute;
-  left: 17px;
-  bottom: 15px;
+  left: 20px;
+  bottom: 18px;
 }
 .nav__updates {
   background-color: tomato;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
+  width: 6px;
+  height: 6px;
+  border-radius: 3px;
   display: block;
   position: absolute;
   left: 25px;
