--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,4 @@
 .user-component {
-  display: flex;
   justify-content: space-between;
 }
 
@@ -44,4 +43,9 @@
 .user-component__column:last-child {
   color: rgba(0, 0, 0, 0.5);
   display: flex;
+  align-items: center;
+}
+
+.user-component__column span {
+  margin-right: 3px;
 }
