--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-weight: 500;
+  font-weight: 600;
 }
 .welcom-header__title {
   margin-bottom: 20px;
@@ -14,6 +14,11 @@
   width: 60%;
   opacity: 0.6;
 }
+
+/* .login-form__input {}
+.login-form__btn {} 
+.login-form__a {} */
+
 #login-form {
   display: flex;
   flex-direction: column;
