--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+
 @import "reset.css";
 @import "variables.css";
 
@@ -12,8 +14,10 @@
 @import "screens/friends.css";
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 1000vh;
+  font-family: "Open Sans", sans-serif;
   color: #2e363e;
+}
+
+.main-screen {
+  padding: 0 var(--horizontal-space);
 }
