--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -41,11 +41,16 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.3);
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .user-component__column span {
   margin-right: 3px;
+}
+
+.user-component__time {
+  margin-bottom: 10px;
 }
