--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .user-component,
@@ -22,7 +23,7 @@
 
 .user-component__subtitle {
   margin-top: 8px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--color-gray5);
   font-size: 17px;
 }
 
@@ -41,7 +42,7 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.3);
+  color: var(--color-gray3);
   display: flex;
   flex-direction: column;
   align-items: flex-end;
