--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -24,3 +24,16 @@
   left: 3px;
   top: -3px;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-gear:hover {
+  animation: rotateCog 2s linear infinite;
+}
