--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -21,9 +21,49 @@
   left: 20px;
   bottom: 18px;
   position: absolute;
+  animation: notificationAnimation 2s ease-in-out infinite;
 }
+
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-3px) scale(1.1);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__updates {
   left: 25px;
   bottom: 25px;
   position: absolute;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.8s;
 }
