--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -16,3 +16,8 @@
 .icon-row__icon span {
   margin-top: 18px;
 }
+
+.icon-row__icon:hover {
+  color: var(--yellow);
+  text-shadow: 1px 1px 5px black;
+}
